# bot-tiktok

./: .env.example  .gitignore  Makefile  README.md  cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/: config.py  dependencies.py  lifespan.py  main.py
app/admin/: router.py  schemas.py  service.py
app/auth/: router.py  service.py
app/database/: connection.py  migrations.py  models.py  repositories.py
app/downloader/: exceptions.py  metadata.py  providers.py  service.py  tiktok_photo_provider.py  yt_dlp_provider.py
app/gateway/: client.py  exceptions.py  schemas.py
app/media/: __init__.py  cleanup.py  ffmpeg.py  images.py  processor.py
app/queue/: __init__.py  recovery.py  service.py  worker.py
app/security/: csrf.py  rate_limit.py  urls.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  dashboard.html  history.html  history_detail.html  login.html  numbers.html  settings.html
app/webhooks/: __init__.py  parser.py  router.py  schemas.py  signature.py
deploy/: farros-tiktok-bot.service
docs/: ARCHITECTURE.md
tests/: conftest.py  test_cli.py  test_downloader_service.py  test_lid_mapping.py  test_queue_worker.py  test_rate_limit.py  test_runtime_bug_regression.py  test_tiktok_photo_parser.py  test_urls.py  test_webhook_router.py  test_webhook_signature.py
